prometheus/1.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: monitoring
spec:
  rules:
  - host: monitor.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana  # service name
          servicePort: 3000   # service pod
  - host: prometheus.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s  # service name
          servicePort: 9090   # service pod
  - host: alertmanager.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main # service name
          servicePort: 9093   # service pod
